목록 펼치기 하는중

--- a/trade/src/main/webapp/css/main_styles_mypage.css
+++ b/trade/src/main/webapp/css/main_styles_mypage.css
@@ -133,3 +133,18 @@ a {
 	text-decoration: none;
 	color: #555;
 }
+
+.none1 {
+	display: none;
+}
+
+.arrow {
+	text-align: center;
+	margin: 0 auto;
+	width: 100px;
+}
+.arrow img{
+	text-align: center;
+	width: 50px;
+	cursor: pointer;
+}
