--- a/trade/src/main/webapp/css/header.css
+++ b/trade/src/main/webapp/css/header.css
@@ -39,39 +39,20 @@ header:hover {
 	text-decoration: none;
 }
 
-dl {
-	display: inline-block;
-}
-
-ul {
-	display: inline-block;
-}
-
-li {
-    list-style: none;
-    text-decoration: none;
-}
-
-.main-1 li {
-    display: inline-block;
-    margin-right: 10px; /* 원하는 간격으로 조절하세요 */
-}
-
-.category-a li {
+.category-a a {
     text-decoration: none;
     color: #333;
     margin-left: 20px;
 }
 
-.category-a li:hover {
+.category-a a:hover {
     color: #A9A9A9; 
     text-decoration: none; 
 }
 
-
 .mainCategory { margin-left: 20px;}
 
-.mainCategory li {
+.mainCategory a {
 	left: -20px;
 	font-size: 14px;
     text-decoration: none;
@@ -79,7 +60,7 @@ li {
     margin-right: 20px;
 }
 
-.mainCategory li:hover {
+.mainCategory a:hover {
     color: #A9A9A9; 
     text-decoration: none; 
 }
