--- a/trade/src/main/webapp/css/header.css
+++ b/trade/src/main/webapp/css/header.css
@@ -66,23 +66,18 @@ header:hover {
     text-decoration: none; 
 }
 
-.mainCategory { margin-left: 20px;}
 
 .category-b { margin-left: 20px;}
 
 .category-b a {
    left: -20px;
    font-size: 14px;
-
-.mainCategory a {
-	left: -20px;
-	font-size: 14px;
     text-decoration: none;
     color: #333;
     margin-right: 20px;
 }
 
-.mainCategory a:hover {
+.category-b a:hover {
     color: #A9A9A9; 
     text-decoration: none; 
 }
