--- a/trade/src/main/webapp/css/footer.css
+++ b/trade/src/main/webapp/css/footer.css
@@ -1,10 +1,35 @@
 @charset "UTF-8";
 
     body {
-      margin: 0;
-      padding: 0;
-      
+      padding:0;
+      bottom: 0;
+      align-items: center;
+      margin:0;
+      width:100%;
     }
+    
+ #footerAll {
+  display: flex;
+      flex-direction: column;
+      min-height: 100%;
+    }
+
+    /* Other styles for your footer components */
+    /* ... */
+
+    /* Adjustments for smaller screens */
+    @media (max-width: 768px) {
+      /* Add your responsive styles here */
+      /* For example, you might change the layout or adjust font sizes for smaller screens */
+    }
+
+.mail {
+  display: flex;
+}
+
+#d1 {
+	padding-right: 15px;
+}
 
     #scrollToTopBtn {
   display: none; /* 초기에는 숨김 상태로 설정합니다. */
@@ -17,7 +42,20 @@
   border-radius: 5px;
   padding: 10px;
   cursor: pointer;
+  scroll-behavior: smooth;
+  
 }
+
+.search button {
+	font-family: 'Noto Sans KR', sans-serif;
+    padding: 10px 15px;
+    background-color: #585858;
+    color: #fff;
+    border: 2px solid #585858;
+    cursor: pointer;
+    transition: background-color 0.2s;
+}
+
 
 #scrollToTopBtn:hover {
   background-color: #999;
@@ -28,6 +66,7 @@
       color: #fff;
       padding: 20px;
       text-align: center;
+      margin-top: 15rem;
     }
 
     .footer-info {
