--- a/trade/src/main/webapp/css/main_styles_mypage.css
+++ b/trade/src/main/webapp/css/main_styles_mypage.css
@@ -140,6 +140,14 @@ a {
 	display: none;
 }
 
+.none2 {
+	display: none;
+}
+
+.none3 {
+	display: none;
+}
+
 .arrow {
 	text-align: center;
 	margin: 0 auto;
