--- a/trade/src/main/webapp/css/pay.css
+++ b/trade/src/main/webapp/css/pay.css
@@ -16,6 +16,10 @@ body {
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	border-radius: 8px;
 	overflow: hidden;
+	display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30%;
 }
 
 .form-container {
