--- a/trade/src/main/webapp/css/qnaContent.css
+++ b/trade/src/main/webapp/css/qnaContent.css
@@ -6,6 +6,7 @@ body {
 	padding: 0;
 	background-color: #f5f5f5; /* 연한 회색 배경색 */
 	color: #333; /* 어두운 회색 계열 텍스트 색상 */
+	
 }
 
 .container {
@@ -16,6 +17,7 @@ body {
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	border-radius: 8px;
 	overflow: hidden;
+	width: 30%;
 }
 
 /* .form-container {
