--- a/trade/src/main/webapp/css/main_styles.css
+++ b/trade/src/main/webapp/css/main_styles.css
@@ -4,7 +4,7 @@
    width: 100%;
    height: 100%;
    align-content: center;
-   margin: 200px  auto 0 auto;
+   margin-left: 200px auto 70px;
 }
 
 
@@ -13,34 +13,6 @@ body {
    margin: 0;
    padding: 0;
    background-color: #ffffff;
-   height: 100%;
-}
-
-.slider-container {
-width: 60%; 
-text-align: -webkit-center;
-  margin: 100px auto 0; /* 위쪽 여백 추가 및 가운데 정렬 */
-  white-space: nowrap; /* 요소들을 가로로 나란히 표시 */
-}
-
-.bx-wrapper {
-   box-shadow: 0 0 5px #fff;
-   border:none;
-   background:#fff;
-}
-
-.slider {
-  width: 100%;
-  height: 400px;
-  object-fit: cover; /* 이미지를 화면에 맞게 조정 */
-}
-
-.slider img {
-object-position: center; /* 이미지 중앙에 위치 */
-  max-width: 100%; /* 부모 요소에 맞게 이미지 크기 조정 */
-  height: auto; /* 이미지 비율 유지 */
-  max-height: 100%; /* 이미지가 부모 요소를 넘지 않도록 최대 높이 설정 */
-  object-fit : contain; /*이미지 비율 유지 */
 }
 
 /* 밑으로 추천 상품 슬라이더 */
@@ -123,6 +95,5 @@ object-position: center; /* 이미지 중앙에 위치 */
     75% { box-shadow: 0 0 8px rgba(0, 0, 255, 0.1); }
     100% { box-shadow: 0 0 8px rgba(255, 0, 255, 0.1); }
 }
-
 
 
