--- a/trade/src/main/webapp/css/main_styles_mypage.css
+++ b/trade/src/main/webapp/css/main_styles_mypage.css
@@ -1,5 +1,44 @@
 @charset "UTF-8";
 
+       .swiper-container {
+            width: 100%;
+            height: 100%;
+        }
+        /* 각 슬라이드 아이템 스타일 */
+        .swiper-slide img {
+            margin-top: 8rem;
+            width: 70%;
+            height: auto;
+            object-fit: cover; /* 이미지 비율 유지 */
+        }
+        
+.swiper-horizontal>.swiper-pagination-bullets,.swiper-pagination-bullets.swiper-pagination-horizontal,.swiper-pagination-custom,.swiper-pagination-fraction {
+    bottom: var(--swiper-pagination-bottom,8px);
+    top: var(--swiper-pagination-top,auto);
+    left: 0;
+    width: 100%;
+    top: 42rem;
+}
+
+
+.swiper-button-prev,
+.swiper-button-next {
+    bottom: auto !important;
+    top: 40rem !important;
+}
+
+.swiper-button-prev {
+    left: 10px !important;
+    right: auto !important;
+}
+
+.swiper-button-next {
+    right: 10px !important;
+    left: auto !important;
+}
+
+
+
 body {
 	font-family: 'Noto Sans KR', sans-serif;
 	margin: 0;
