--- a/trade/src/main/webapp/css/productUpload.css
+++ b/trade/src/main/webapp/css/productUpload.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container {
-   max-width: 800px;
+   width: 70%;
    margin: 200px auto 70px;
    padding: 20px;
    background-color: #fff; /* 흰색 배경색 */
