--- a/trade/src/main/webapp/css/productList.css
+++ b/trade/src/main/webapp/css/productList.css
@@ -152,7 +152,7 @@ a {
 
 .product img {
 	width: 100%;
-	height: auto;
+	height: 200px;
 	object-fit: cover;
 	object-position: center top;
 	transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
