--- a/trade/src/main/webapp/css/productList.css
+++ b/trade/src/main/webapp/css/productList.css
@@ -110,6 +110,30 @@ a {
     text-decoration: none;
 }
 
+.refresh-btn{
+	border:1px solid transparent;
+	background-color: transparent;
+	text-align: center;
+    vertical-align: middle;
+    font-size: 0.875rem;
+    padding: 0.375rem 0.75rem;
+}
+
+.refresh-btn img {
+	width:30px;
+}
+
+.refresh-btn:hover {
+	color: #6c757d;
+	text-decoration: none; 
+}
+.refresh-btn:focus, .refresh-btn.focus {
+	outline: 0;
+	box-shadow: 0 0 0 0.2rem rgba(27, 104, 255, 0.25); 
+}
+.refresh-btn.disabled, .refresh-btn:disabled { opacity: 0.65; }
+.refresh-btn:not(:disabled):not(.disabled) { cursor: pointer; }
+
 .ir *, .blind { /* 상품분류 리스트 가리기 */
     z-index: -1;
     position: absolute;
