--- a/trade/src/main/webapp/css/main_styles.css
+++ b/trade/src/main/webapp/css/main_styles.css
@@ -81,7 +81,7 @@ body {
 
 .product img {
    width: 100%;
-   height: 200px;
+   height: 16rem;
    object-fit: cover;
    object-position: center top;
    transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
