--- a/trade/src/main/webapp/css/kakaopay.css
+++ b/trade/src/main/webapp/css/kakaopay.css
@@ -22,6 +22,11 @@ body {
 	text-align: center;
 }
 
+.find-btn{
+	text-align: center;
+}
+
+
 .btn {
 	width: 150px;
 	padding: 10px;
@@ -34,6 +39,7 @@ body {
 	border-radius: 4px;
 	cursor: pointer;
 	transition: background-color 0.3s;
+	display :inline-block;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 버튼에 그림자 추가 */
 }
 
@@ -49,4 +55,8 @@ body {
 	text-align: center;
 	color: red;
 	font-size: 12px;
+}
+
+.center{
+	text-align: center;
 }
