--- a/trade/src/main/webapp/css/findpw.css
+++ b/trade/src/main/webapp/css/findpw.css
@@ -1,3 +1,63 @@
 @charset "UTF-8";
 
+fieldset {
+	border: 2px solid #222;
+	border-radius: 10px;
+	width: 25rem;
+	margin: 100px auto 70px;
+	padding: 20px;
+}
 
+/* form 스타일 */
+form {
+	margin-bottom: 0px; /* 폼 간격 조절 */
+}
+
+legend {
+	font-size: 18px;
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+
+/* input 스타일 */
+input {
+	padding: 5px; /* 내부 여백 */
+	margin: 5px 0px 10px 10px; /* 마진 설정 */
+}
+
+/* button 스타일 */
+input[type="submit"], input[type="button"] {
+	background-color: #333; /* 배경 색상 */
+	color: #fff; /* 글자 색상 */
+	padding: 8px 15px; /* 내부 여백 */
+	border: none; /* 테두리 없음 */
+	border-radius: 3px; /* 둥근 테두리 */
+	cursor: pointer; /* 커서 타입 */
+}
+
+input[type="submit"]:hover {
+	background-color: #222;
+}
+
+/* hr 스타일 */
+hr {
+	border: 1px solid #000; /* 수평선 색상 */
+	margin-top: 20px; /* 윗쪽 간격 조절 */
+	margin-bottom: 20px; /* 아래쪽 간격 조절 */
+}
+
+#a {
+	margin: 5px 0px 10px 10px;
+}
+
+#c {
+	margin: 5px 0px 10px 11px;
+}
+
+#d {
+	margin: 5px 0px 10px 10px;
+}
+
+#e {
+	margin: 5px 0px 10px 175px;
+}
