휴휴휴휴휴 product 컨테이너

--- a/trade/src/main/webapp/css/mypage.css
+++ b/trade/src/main/webapp/css/mypage.css
@@ -88,8 +88,11 @@ body {
 }
 
 .form-group {
-	margin-bottom: 20px;
+	width:100%;
+/* 	margin-bottom: 20px; */
 }
+
+
 
 .form-group2 {
 	margin-bottom: 20px;
