--- a/trade/src/main/webapp/css/main_styles_mypage.css
+++ b/trade/src/main/webapp/css/main_styles_mypage.css
@@ -1,16 +1,16 @@
 @charset "UTF-8";
 
-.swiper-container {
-     width: 100%;
-     height: 100%;
- }
- /* 각 슬라이드 아이템 스타일 */
-.swiper-slide img {
-    margin-top: 8rem;
-    width: 70%;
-    height: auto;
-    object-fit: cover; /* 이미지 비율 유지 */
-}
+  .swiper-container {
+       width: 100%;
+       height: 100%;
+   }
+   /* 각 슬라이드 아이템 스타일 */
+   .swiper-slide img {
+       margin-top: 8rem;
+       width: 70%;
+       height: auto;
+       object-fit: cover; /* 이미지 비율 유지 */
+   }
         
 .swiper-horizontal>.swiper-pagination-bullets,.swiper-pagination-bullets.swiper-pagination-horizontal,.swiper-pagination-custom,.swiper-pagination-fraction {
     bottom: var(--swiper-pagination-bottom,8px);
@@ -36,8 +36,6 @@
     right: 10px !important;
     left: auto !important;
 }
-
-
 
 body {
 	font-family: 'Noto Sans KR', sans-serif;
@@ -106,7 +104,19 @@ body {
    overflow: hidden;
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
    transition: box-shadow 0.3s ease-in-out;
+   
 }
+
+/*제목 두줄 이상시 ...으로*/
+.product-info h3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 1; 
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis; 
+  white-space: normal;
+}
+
 
 .product1:hover { /* 틀 그림자 무지개 호버 */
 	animation: colorfulShadow 2s infinite;
@@ -115,7 +125,7 @@ body {
 
 .product1 img {
 	width: 100%;
-	height: 200px;
+	height: 16rem;
 	object-fit: cover;
 	object-position: center top;
 	transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
