--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -127,6 +127,37 @@ body {
 }
 
 .dropdown-content {
+    display: none;
+    position: absolute;
+    text-align: center;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    right: 0;
+    top: 100%;
+    border-radius: 4px;
+}
+
+/* 버튼 스타일 수정 */
+.dropdown-content button {
+    display: block;
+    width: 100%;
+    padding: 8px;
+    margin: 4px 0;
+    background-color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+/* 버튼에 호버 효과 추가 */
+.dropdown-content button:hover {
+    background-color: #ddd;
+}
+
+/* .dropdown-content {
 	display: none;
 	position: absolute;
 	text-align: center;
@@ -137,7 +168,7 @@ body {
 	z-index: 1;
 	right: 0;
 	top: 100%;
-	background-color: #f9f9f9; /* 위에서 아래로 표시되도록 조정 */
+	background-color: #f9f9f9; 위에서 아래로 표시되도록 조정
 	border-radius: 4px;
 }
 
@@ -153,7 +184,7 @@ body {
 
 .dropdown-content button:hover {
 	cursor: pointer;
-}
+} */
 
 
 .dropdown:hover .dropdown-content {
