--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -129,14 +129,14 @@ body {
 .dropdown-content {
     display: none;
     position: absolute;
-    text-align: center;
-    background-color: #f9f9f9;
-    min-width: 100px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
     right: 0;
     top: 100%;
+    min-width: 120px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    background-color: #fff;
     border-radius: 4px;
+    border: 1px solid #ddd;
 }
 
 /* 버튼 스타일 수정 */
@@ -154,8 +154,9 @@ body {
 
 /* 버튼에 호버 효과 추가 */
 .dropdown-content button:hover {
-    background-color: #ddd;
+     background-color: #f5f5f5;
 }
+
 
 /* .dropdown-content {
 	display: none;
