--- a/trade/src/main/webapp/css/mainSlider.css
+++ b/trade/src/main/webapp/css/mainSlider.css
@@ -36,13 +36,13 @@
 }
 /* 각 슬라이드 아이템 스타일 */
 .swiper-slide img {
-	padding-left: 5rem;
-	padding-right: 5rem;
-    margin-top: 9rem;
-    width: 800px;
-    height: auto;
-    object-fit: cover;
-    flex: 0 0 auto;
+/* 	padding-left: 5rem; */
+/* 	padding-right: 5rem; */
+    margin-top: 8rem;
+    width: 100%;
+    height: 840px;
+/*     object-fit: cover; */
+/*     flex: 0 0 auto; */
 }
         
 .swiper-horizontal>.swiper-pagination-bullets,.swiper-pagination-bullets.swiper-pagination-horizontal,.swiper-pagination-custom,.swiper-pagination-fraction {
