realmain수정한거없음-빈칸만잇음 푸터 top 아이콘 추가

--- a/trade/src/main/webapp/css/footer.css
+++ b/trade/src/main/webapp/css/footer.css
@@ -40,8 +40,8 @@ body {
    position: fixed;
    bottom: 20px;
    right: 20px;
-   background-color: #999;
-   color: #fff;
+   background-color: unset;
+   color: #555;
    border: none;
    border-radius: 5px;
    padding: 10px;
@@ -65,9 +65,9 @@ body {
    display: inline-block;
 }
 
-#scrollToTopBtn:hover {
+/* #scrollToTopBtn:hover {
    background-color: #999;
-}
+} */
 
 html {
    scroll-behavior: smooth;
