헤더, 메인페이지 css

--- a/trade/src/main/webapp/css/header.css
+++ b/trade/src/main/webapp/css/header.css
@@ -199,6 +199,13 @@ header:hover {
    align-items: center;
 }
 
+#headerimage {
+    display: block; 
+    margin: -20px;
+    margin-bottom: 5px;
+    width: 100%; 
+}
+
 #login {
 	width: 40px;
 	margin-right:5px;
