--- a/trade/src/main/webapp/css/header.css
+++ b/trade/src/main/webapp/css/header.css
@@ -227,8 +227,10 @@ header:hover {
 }
 
 #loginname {
-	Display: flex;
+    Display: flex;
     FONT-WEIGHT: 700;
+    transform: translate(0%,-150%);
+    margin-bottom: -18px;
 }
 
 #write {
@@ -247,6 +249,16 @@ header:hover {
 }
 
 .mypage {
+	display: flex;
+	width: 30%;
+}
+
+#admin {
+	width: 25px;
+	margin-bottom: 9px
+}
+
+.admin {
 	display: flex;
 	width: 30%;
 }
@@ -278,13 +290,13 @@ header:hover {
 }
 
 #user-menu {
-   margin-left: auto;
-   width: 30%;
-   transform: translate(-30%, 105%);
+    width: 30%;
+    transform: translate(5%, 110%);
+    text-align: left;
 }
 
 .user-menu span {
-   display: inline-block;
+   margin-botton: -20px;
 }
 
 .category-a a {
