--- a/trade/src/main/webapp/css/productList.css
+++ b/trade/src/main/webapp/css/productList.css
@@ -10,18 +10,21 @@ body {
 /* 필터링 */
 
 .title {
-    width: 250px;
+   width: 250px;
     margin: 250px auto 50px;
     text-align: center;
     height: 40px;
     line-height: 40px;
     text-transform: uppercase;
-    border: 3px double #f1f1f1;
+    border: 3px solid #f1f1f1; 
+    border-radius: 10px; 
     font-weight: bold;
-    font-size: 12px;
-    color: #000;
+    font-size: 14px;
+    color: #555; 
     text-transform: uppercase;
     letter-spacing: 1px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+    background-color: #fff; 
 }
 
 
