--- a/trade/src/main/webapp/css/findidsuccess.css
+++ b/trade/src/main/webapp/css/findidsuccess.css
@@ -2,7 +2,7 @@
 
 fieldset {
             width: 300px;
-            margin: 0 auto;
+            margin: 10rem auto 15rem;
             padding: 30px;
             border: 2px solid #333;
             border-radius: 10px;
