--- a/trade/src/main/webapp/css/findid.css
+++ b/trade/src/main/webapp/css/findid.css
@@ -25,7 +25,7 @@ fieldset {
   border: 2px solid #222;
   border-radius: 10px;
   width: 25rem;
-  margin: 13rem auto; 
+  margin: 23rem auto 14rem; 
   padding: 20px;
 }
 
