--- a/trade/src/main/webapp/css/findpw.css
+++ b/trade/src/main/webapp/css/findpw.css
@@ -4,7 +4,7 @@ fieldset {
 	border: 2px solid #222;
 	border-radius: 10px;
 	width: 25rem;
-	margin: 100px auto 70px;
+	margin: 15rem auto 11rem;
 	padding: 20px;
 }
 
