--- a/trade/src/main/webapp/css/footer.css
+++ b/trade/src/main/webapp/css/footer.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+@font-face {
+    font-family: 'omyu_pretty';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-01@1.0/omyu_pretty.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
 
 footer {
    width: 100%;
@@ -17,6 +23,10 @@ body {
    display: flex;
    flex-direction: column;
    min-height: 100%;
+}
+#copy {
+	font-family: omyu_pretty;
+	font-size: 22px;
 }
 
 /* Other styles for your footer components */
