--- a/trade/src/main/webapp/css/memberupdate.css
+++ b/trade/src/main/webapp/css/memberupdate.css
@@ -2,7 +2,7 @@
 
 .ff {
     max-width: 400px;
-    margin: 1.5rem auto;
+    margin: 6rem auto 70px;
     padding: 40px;
     background-color: #f3f3f3;
     border: 1px solid #ccc;
