--- a/trade/src/main/webapp/css/findpw.css
+++ b/trade/src/main/webapp/css/findpw.css
@@ -63,6 +63,12 @@ form .in[type="submit"] {
 #find {
 	float:right;
 }
+#pre:hover {
+	background: #222 !important;
+}
+#find:hover {
+	background: #222 !important;
+}
 
 /* form 스타일 */
 form {
@@ -83,16 +89,13 @@ input {
 
 /* button 스타일 */
 input[type="submit"], input[type="button"] {
+	height:40px;
 	background-color: #333; /* 배경 색상 */
 	color: #fff; /* 글자 색상 */
 	padding: 8px 15px; /* 내부 여백 */
 	border: none; /* 테두리 없음 */
-	border-radius: 3px; /* 둥근 테두리 */
+	border-radius: 5px; /* 둥근 테두리 */
 	cursor: pointer; /* 커서 타입 */
-}
-
-.in:hover {
-	background-color: #222;
 }
 
 /* hr 스타일 */
