--- a/trade/src/main/webapp/css/productContent.css
+++ b/trade/src/main/webapp/css/productContent.css
@@ -35,7 +35,7 @@ body {
 	border-radius: 8px; /* 이미지에도 둥근 테두리 적용 */
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 이미지에 그림자 추가 */
 	transition: transform 0.3s; /* 이미지 확대/축소 트랜지션 추가 */
-   width: 50%;
+  /*  width: 50%; */
 /*    padding-right: 20px; 이미지 컨테이너 오른쪽 여백 추가 */
    display: flex;
    flex-direction: column;
@@ -64,6 +64,7 @@ body {
 	align-items: center;
 	width: 150%; /* 이미지 미리보기의 가로 크기를 조정 */
 	/*	border: 1px solid;*/
+	height: 400px;
 }
 
 .image-preview-choice {
@@ -77,7 +78,8 @@ body {
 	cursor: pointer; /* 마우스 커서를 손가락 포인터로 변경하여 클릭 가능한 요소임을 나타냄 */
 	border: 2px solid #ccc; /* 이미지 주변에 회색 테두리 표시 (선택 사항) */
 	margin: 5px; /* 이미지 사이의 여백 설정 (선택 사항) */
-	width: 30px;
+	width: 50px;
+	height: 50px;
 }
 
 .clickable-image:hover {
